Add junit5 labs module